# employee_auth_app

./: README.md  app.py  pyproject.toml
Courses/: MODULE_1.md  MODULE_2.md  MODULE_3.md  MODULE_4.md  MODULE_5.md  MODULE_6.md
instance/: employees.db
models/: models.py
static/css/: styles.css
templates/: authenticate.html  index.html  register.html
