[tool.poetry]
name = "employee-auth-app"
version = "0.1.0"
description = ""
authors = ["vincent whannou de dravo <vincent.whannou.de.dravo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
opencv-python-headless = "^4.10.0.82"
numpy = "^1.26.4"
face-recognition = "^1.3.0"
sqlalchemy = "^2.0.30"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
